# lightning_test

./: README.md  pyproject.toml  test.py  test_pretraining.py
