[tool.poetry]
name = "lightning-test"
version = "0.1.0"
description = "Just a test"
authors = ["Pierre"]
readme = "README.md"
packages = [{include = "lightning_test"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl" }
lightning = "^2.0.6"
black = "^23.7.0"
torchvision = {url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp310-cp310-linux_x86_64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
